objects/T_Offer_Template__c.object
<CustomObject>
    <label>[T] Offer Template</label>
    <nameField>
        <label>Offer Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <description>This is the Subject Line for the offer mail.
Robin S. 12.04.2019</description>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Type__c</fullName>
        <label>Template Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pflege 01 Neues Vertretungsangebot ANUE</fullName>
                    <label>Pflege 01 Neues Vertretungsangebot ANÜ</label>
                </value>
                <value>
                    <fullName>Pflege 02 Neues Vertretungsangebot</fullName>
                </value>
                <value>
                    <fullName>Arzt 01 Anfrage für Dienste</fullName>
                </value>
                <value>
                    <fullName>Recruitment 01 Festanstellung</fullName>
                </value>
                <value>
                    <fullName>Recruitment 02 - Klinik sucht Pfleger</fullName>
                </value>
                <value>
                    <fullName>Caregiver</fullName>
                    <isActive>false</isActive>
                    <label>Caregiver</label>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                    <isActive>false</isActive>
                    <label>Doctor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>